--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<app-hero></app-hero>
+<app-hero (searchQueryChange)="handleSearchChange($event)"></app-hero>
 
 <div class="flex flex-col lg:flex-row gap-6 px-4 pt-5">
     <div class="lg:w-1/5 w-full">
@@ -6,7 +6,7 @@
     </div>
 
     <div class="lg:w-3/3 w-full">
-        <app-latest-jobs></app-latest-jobs>
+        <app-latest-jobs [jobs]='filteredJobs'></app-latest-jobs>
     </div>
 </div>
 
