--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="shadow py-4 flex flex-row">
     <div class="container px-4 2xl:px-20 mx-auto flex justify-between items-center">
         <img src="https://res.cloudinary.com/dgtfgihga/image/upload/v1753714978/Screenshot_2025-07-28_203234_gmzguo.png"
-            alt="logo" class="w-50 h-15 bg-white" />
+            alt="logo" class="w-50 h-15 bg-white cursor-pointer" routerLink="/"/>
         <div class="flex gap-4 max-sm:text-xs">
             <button class="text-gray-600">Recruiter Login</button>
             <button class="bg-blue-600 text-white px-6 sm:px-9 py-2 rounded-full">Register</button>
