--- a/frontend/src/app/home/filters/filters.component.html
+++ b/frontend/src/app/home/filters/filters.component.html
@@ -3,7 +3,7 @@
     <h1 class="text-lg font-medium py-4">Search by Categories</h1>
     <div class="space-y-4" *ngFor="let jobs of jobCategories; let i = index">
         <div class="flex gap-3 items-center">
-            <input type="checkbox" class="scale-125 " [id]="'job-' + i">
+            <input [checked]="filterCategories.includes(jobs)" (change)="onCategoryChange($event, jobs)" type="checkbox" class="scale-125 " [id]="'job-' + i">
             <label [for]="'job-' + i">{{jobs}}</label>
         </div>
     </div>
@@ -11,7 +11,7 @@
     <h1 class="text-lg font-medium py-4">Search by Location</h1>
     <div class="space-y-4" *ngFor="let location of jobLocations; let i = index">
         <div class="flex gap-3 items-center">
-            <input type="checkbox" class="scale-125" [id]="'location-' + i">
+            <input [checked]="locationCategories.includes(location)" (change)="onLocationChange($event, location)" type="checkbox" class="scale-125" [id]="'location-' + i">
             <label [for]="'location-' + i">{{location}}</label>
         </div>
     </div>
