--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
 <div class="flex flex-col lg:flex-row gap-6 px-4 pt-5">
     <div class="lg:w-1/5 w-full">
-        <app-filters></app-filters>
+        <app-filters (filteredChanges)="handleFilteredChanges($event)"></app-filters>
     </div>
 
     <div class="lg:w-3/3 w-full">
