--- a/frontend/src/app/job-details/job-details.component.html
+++ b/frontend/src/app/job-details/job-details.component.html
@@ -23,7 +23,7 @@
                         </span>
                         <span class="flex items-center gap-1">
                             <img [src]="moneyIcon" alt="" class="">
-                            ${{jobDetails.salary}}
+                            CTC: ${{jobDetails.salary}}
                         </span>
                     </div>
                 </div>
@@ -33,15 +33,19 @@
                 <p class="mt-1 text-gray-600">Posted 35 minutes ago</p>
             </div>
         </div>
-        <div class="flex flex-col lg:flex-row justify-between items-start">
+        <div class="flex flex-col lg:flex-row justify-between items-start gap-8">
+            <!-- Left: Job Description -->
             <div class="w-full lg:w-2/3">
                 <h2 class="font-bold text-2xl mb-4">Job Description</h2>
-                <div class="text-gray-700" [innerHTML]="jobDetails.description">
-                </div>
+                <div class="text-gray-700" [innerHTML]="jobDetails.description"></div>
                 <button class="bg-blue-600 p-2.5 px-10 text-white rounded mt-10">Apply Now</button>
             </div>
+
+            <!-- Right: Related Jobs -->
+            <div class="w-full lg:w-1/3 mt-8 lg:mt-0 space-y-5">
+                <app-relatedjobs [relatedJobs]="relatedJobs"></app-relatedjobs>
+            </div>
         </div>
+
     </div>
 </div>
-
-<app-relatedjobs></app-relatedjobs>
